# shu-xiang

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.specstory/: .project.json  statistics.json
.specstory/history/: 2026-05-10_18-59-27Z.md
agent/: browser_loop.py  clarification.py  cold_open.py  demo_runner.py  i18n.py  overlay_bridge.py  pacing.py  preflight.py  preflight_conversation.py  real_site_runner.py  speech.py  state.py  voice_questions.py
corpus/: __init__.py  il_llc_corpus.py  mytax_il_reg1_corpus.py  requirements.py
demo/: il_sos_mock.html
overlay/: inject.js
pdf/: generator.py  template.html
scripts/: derisk_async_hooks.py  derisk_cold_open_eval.py  derisk_csp.py  diagnose_pacing.py  inspect_managers_page.py  precache_question_audio.py  recon_il_assumed_name.py  recon_il_sos.py  recon_mytax_il.py  screenshot_overlay.py
tests/: test_regex_match.py
voice/: elevenlabs_voice.py  intent_extraction.py  live_stt.py  mic_capture.py  regex_match.py  scripted.py
web/: package-lock.json  package.json  tsconfig.tsbuildinfo
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/plan/intake/: route.ts
web/app/api/plan/launch/: route.ts
web/app/api/plan/localize/: route.ts
web/app/api/voice/: env.ts
web/app/api/voice/stt/: route.ts
web/app/api/voice/tts/: route.ts
web/app/plan/: client.tsx  page.tsx
